--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,12 +33,12 @@ jobs:
       # Update the docker login and docker build commands to point at your JFrog Platform instance instead of mine.        
       - name: Build the docker images
         run: |
-          docker login katdemo.jfrog.io -u ${{ secrets. JF_ARTIFACTORY_USER}} -p ${{ secrets. JF_ARTIFACTORY_PASSWORD}}
-          docker build --tag katdemo.jfrog.io/docker/my-docker-image:latest ./sample-projects/docker-example
+          docker login kat101.jfrog.io -u ${{ secrets. JF_ARTIFACTORY_USER}} -p ${{ secrets. JF_ARTIFACTORY_PASSWORD}}
+          docker build --tag kat101.jfrog.io/docker/my-docker-image:latest ./sample-projects/docker-example
       # Update the docker push command to point at your JFrog Platform instance instead of mine.
       - name: Docker push with JFrog CLI
         run: |
-          ./jfrog rt docker-push katdemo.jfrog.io/docker/my-docker-image:latest docker --build-name=devops101-docker --build-number=${{ github.run_number }}
+          ./jfrog rt docker-push kat101.jfrog.io/docker/my-docker-image:latest docker --build-name=devops101-docker --build-number=${{ github.run_number }}
   
       - name: Collect the environment variables and create the build info 
         run: |
