--- a/sample-projects/docker-example/pipelines.yml
+++ b/sample-projects/docker-example/pipelines.yml
@@ -3,7 +3,7 @@ resources:
     type: GitRepo
     configuration:
       gitProvider: my_github                       # <-- replace with your integration
-      path: katcosgrove/devops-101-workshop/sample-projects/docker-example    # <-- replace with your repository name
+      path: katcosgrove/devops-101-workshop   # <-- replace with your repository name
       branches:
         include: new-pipeline
 
@@ -38,7 +38,7 @@ pipelines:
         type: DockerBuild
         configuration:
           affinityGroup: demo_group
-          dockerFileLocation: .
+          dockerFileLocation: ./sample-projects/docker-example
           dockerFileName: Dockerfile
           dockerImageName: katcsandbox.jfrog.io/demo-docker-local/docker-demo  # replace with your image path and name
           dockerImageTag: ${run_number}
