--- a/sample-projects/docker-example/Dockerfile
+++ b/sample-projects/docker-example/Dockerfile
@@ -1,1 +1,12 @@
-FROM katcsandbox.jfrog.io/demo-docker/ubuntu:16.04
+FROM python:3-alpine
+
+WORKDIR /app
+
+COPY requirements.txt .
+RUN pip install -r requirements.txt
+
+COPY . .
+
+EXPOSE 5000 
+
+CMD ["python", "app.py"]
